# tesis-hexapodo

./: ProjectHome.md
Documentos/Adelanto de Tesis/: Calculoqangulos2.eps
Documentos/Matlab/: cinver.m  parametrizacionEspacioTrabajo.m  plotSalidaVrep.m  trayectoria.m
Documentos/PropuestaMaureenV2/: IEEEtran.bst  My Collection.bib  PropCompleta.lyx  refer.bib  referV2.bib  resumenV2.lyx  resumenV3.lyx  unicebolla.eps
ROS/Convexhull/: analisis.hpp  convexhull.cpp  vector3d.cpp  vector3d.hpp
ROS/camina/: datos.launch
ROS/camina10/: CMakeLists.txt  manifest.xml
ROS/camina11/: CMakeLists.txt  manifest.xml
ROS/camina11/datos/: CM_ME.txt  Errores.txt  LogCorreccion.txt  LogPlanificador.txt  Nodo6_P1.txt  Nodo6_P2.txt  Nodo6_P3.txt  Nodo6_P4.txt  Nodo6_P5.txt  Nodo6_P6.txt  Nodo6_body.txt  Nodo6_vel.txt  Pata1.txt  Pata2.txt  Pata3.txt  Pata4.txt  Pata5.txt  Pata6.txt  QXEnviada_Pata1.txt  QXEnviada_Pata2.txt  QXEnviada_Pata3.txt  QXEnviada_Pata4.txt  QXEnviada_Pata5.txt  QXEnviada_Pata6.txt  RegistroCorridas.txt  SalidaDatos.txt  SalidaMapa_ajuste.txt  SalidaTiempo.txt  convexhull.txt
ROS/camina11/src/: CentrodeMasa.cpp  Nodo1_datosTrayectoriaPata.cpp  Nodo2_parametrizacion.cpp  Nodo3_RosVrep.cpp  Nodo5_ConstruccionDeMapa.cpp  Nodo6_UbicacionRobot2.cpp  constantes.cpp  constantes.hpp  server_PlanificadorPisada.cpp
ROS/camina11/srv/: PlanificadorParametros.srv
ROS/camina12/: CMakeLists.txt
ROS/camina2/: CMakeLists.txt  SalidaQ1.txt  SalidaQ3.txt  SalidaQ4.txt  SalidaX5.txt  mainpage.dox  pQ2.txt  pQ3.txt  posicionQ
ROS/camina2/msg/: DatosTrayectoriaPata.msg  DatosTrayectoriaRob.msg  UbicacionRobot.msg
ROS/camina2/src/: Nodo1_datosTrayectoriaPata.cpp  Nodo3_RosVrep.cpp  constantes.hpp  server_Cinversa.cpp  vector3d.cpp  vrep_to_arana1.cpp  vrep_to_arana3.cpp
ROS/camina2/src/camina/msg/: _DatosTrayectorias.py  _DatosTrayectorias2.py  _Pisada.py  _SenalesCambios.py
ROS/camina2/src/camina/srv/: _TransHomogeneaParametros.py  _TransTrayectoriaParametros.py
ROS/camina2/src/otros/: nodo3_rosAranaRob (copy).cpp  orig_nodo2_parametrizacion.cpp
ROS/camina2/srv/: PlanificadorParametros.srv
ROS/camina2/util/LibreriaExtra/: analisis.cpp  convexhull.hpp
ROS/camina2/util/comm/: comm.hpp
ROS/camina3/: CMakeLists.txt
ROS/camina4/: CMakeLists.txt
ROS/camina5/: CMakeLists.txt  mainpage.dox  manifest.xml
ROS/camina6/: mainpage.dox
ROS/camina7/: manifest.xml
ROS/camina8/: CMakeLists.txt  manifest.xml
ROS/camina9/: CMakeLists.txt  mainpage.dox
ROS/hexacamina/: CMakeLists.txt  mainpage.dox  manifest.xml
ROS/hexacamina/msg/: commData.msg
ROS/hexacamina/src/: angulos_arana.cpp  arana_connection.cpp
ROS/hexacamina/src/hexacamina/msg/: __init__.py
ROS/hexacamina/util/comm/: comm.cpp
ROS/pruebas/: CMakeLists.txt  mainpage.dox  manifest.xml
Vrep/: Escena2Pruebas.ttt  Escena3.ttt  Escena4.ttt  Escena5.ttt  Escena6.ttt  Final_implemetacion_Trip.ttt  Final_implemetacion_Trip_2.ttt  Final_implemetacion_Wave.ttt  ImplementacionV0.ttt  ImplementacionV10.ttt  ImplementacionV11.ttt  ImplementacionV13.ttt  ImplementacionV2.ttt  ImplementacionV3.ttt  ImplementacionV5.ttt  ImplementacionV6.ttt  ImplementacionV7.ttt  ImplementacionV8_c4.ttt  ImplementacionV8_c5.ttt  ImplementacionV8_c6.ttt  ImplementacionV9.ttt  arana11_modeloV7.ttt  arana12_modeloV8.ttt  arana15_modeloV11.ttt  arana16_modeloV12.ttt  arana17_modeloV13.ttt  arana18_modeloV14.ttt  arana19_modeloV15.ttt  arana20_modeloV16.ttt  arana21_modeloV17.ttt  arana22_modeloV18.ttt  arana23_modeloV19.ttt  arana24_modeloV20.ttt  arana25_modeloV21.ttt  arana25_modeloV21_2.ttt  arana26_modelo_trip.ttt  arana27_modelo_wave.ttt  arana2_modeloV1.ttt  arana4_movimientoVrep.ttt  arana6_URDFImportado  (+4 more)
Vrep/Mapa/: M14.eps  M2.eps  M3_1.eps  M3_2.eps  M4.eps  M5.eps  M8.eps  MapaRand.cpp  Mapa_Caso0.txt  Mapa_Caso1.txt  Mapa_Caso13.txt  Mapa_Caso15.txt  Mapa_Caso3_1.txt  Mapa_Caso3_2.txt  Mapa_Caso3_3.txt  Mapa_Caso3_3_o.txt  Mapa_Caso3_4_o.txt  Mapa_Caso5.txt  Mapa_Caso6_1.txt  Mapa_Caso7.txt  Mapa_Caso7_o.txt  Mapa_Caso8.txt  Mapa_Caso9.txt  Mapa_CasoRand_10p_3.txt  Mapa_CasoRand_5p_1.txt  Mapa_CasoRand_prueba.txt  (+3 more)
trunk/ROS/camina/: CMakeLists.txt  manifest.xml
trunk/ROS/camina/datos/: CM_ME.txt  LogPlanificador.txt  Nodo6.txt  SalidaMapa.txt  SalidaQ1.txt  SalidaQ2.txt  SalidaQ3.txt  SalidaQ4.txt  SalidaQ5.txt  SalidaQ6.txt  SalidaX1.txt  SalidaX2.txt  SalidaX3.txt  SalidaX4.txt  SalidaX5.txt  SalidaX6.txt  convexhull.txt
trunk/ROS/camina/datos/Pruebas/: LogPlanificador_12_08.txt
trunk/ROS/camina/include/camina/: _v_repConst.h
trunk/ROS/camina/launch/: prueba_force_arana.launch
trunk/ROS/camina/msg/: AnguloParaVrep.msg  DatosTrayectorias2.msg  Pisada.msg  Punto.msg
trunk/ROS/camina/src/: CentrodeMasa.cpp  Nodo1_datosTrayectoriaPata.cpp  Nodo1_parametrizacion.cpp  Nodo3_RosVrep.cpp  Nodo6_Ubicacion2PataTip.cpp  Nodo6_Ubicacion3PataMotor.cpp  server_EspacioTrabajo.cpp  server_PlanificadorPisada.cpp  server_TrayectoriaEliptica1.cpp  server_TrayectoriaMundoPata.cpp
trunk/ROS/camina/src/Convexhull/: vector3d.cpp
trunk/ROS/camina/src/Nodos_26-09/: Nodo1_parametrizacion.cpp  Nodo6_UbicacionRobot.cpp  Nodo8_PlanificadorPisada.cpp  server_TrayectoriaEliptica1.cpp
trunk/ROS/camina/src/Nodos_ok_20-08/: Nodo0_controlTrayectoria.cpp  Nodo1_datosTrayectoriaPata.cpp  Nodo2_parametrizacion.cpp  Nodo2_parametrizacion_V2.cpp  Nodo3_RosVrep.cpp  Nodo3_RosVrep_V2.cpp  Nodo5_ConstruccionDeMapa1.cpp  Nodo6_UbicacionRobot.cpp  TransHomogenea_client.cpp  arana_connection.cpp  force3D_input.cpp  server_TransformacionHomogenea.cpp  vrep_to_arana.cpp
trunk/ROS/camina/src/camina/msg/: _CoordenadasPatas.py  _DatosTrayectoriaRob.py  _InfoMapa.py  _UbicacionRobot.py  __init__.py
trunk/ROS/camina/src/camina/srv/: _CinversaParametros.py  _PlanificadorParametros.py  __init__.py
trunk/ROS/camina/src/otros/: Obstaculos (copy).cpp  comprueba.cpp  nodo2_parametrizacion (copy).cpp  nodo3_cin_inv.cpp  orig_nodo1_datos.cpp  vrep_to_arana.cpp
trunk/ROS/camina/src/otros/comm/: comm.cpp
trunk/ROS/camina/util/comm/: comm.cpp
(+903 files in other folders)
